--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,47 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css?family=Roboto");
+@font-face {
+  font-family: "San Francisco";
+  font-weight: 400;
+  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff");
+}
+h1, h2 {
+  text-align: left;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+h2 {
+  font-size: 20px;
+  line-height: 125%;
+  margin-block-end: 0;
+  margin-block-start: 0;
+  margin-top: 0;
+  margin-bottom: 8px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+html, body {
+  font-family: "Roboto", sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
+.page {
+  padding: 32px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+img {
+  width: 100%;
+}
+
+figure {
+  margin: 0;
+}
+
+p {
+  margin: 0;
+  text-align: left;
+}
+
+@media screen and (max-width: 480px) {
+  .page {
+    padding: 0;
   }
-  to {
-    transform: rotate(360deg);
-  }
 }
+
+/*# sourceMappingURL=App.css.map */
