--- a/src/styles/_basevars.scss
+++ b/src/styles/_basevars.scss
@@ -4,11 +4,9 @@
     src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff");
   }
 
-$color-bg: #f6f6f6;
-$color-txt: #444444;
-$color-txt-light: #d1d1d1;
-$color-txt-emp: #1482AA;
-$color-txt-emp-light: rgba(20,130,170,.3);
+$color-bg: #f8f8f8;
+$color-blk: #373B40;
+$color-grey: #9BA5B1;
 
 $txt-wt: 400;
 $txt-wt-emp: 600;
