--- a/src/App.css
+++ b/src/App.css
@@ -8,17 +8,87 @@ h1, h2 {
   text-align: left;
 }
 
-h2 {
+h1 {
   font-size: 20px;
   line-height: 125%;
   margin-block-end: 0;
   margin-block-start: 0;
   margin-top: 0;
+  margin-left: 8px;
+  margin-right: 8px;
+  font-weight: bold;
+}
+
+h2 {
+  font-size: 12px;
+  line-height: 18px;
+  margin-block-end: 0;
+  margin-block-start: 0;
+  margin-top: 0;
+  margin-bottom: 8px;
+  margin-left: 8px;
+  margin-right: 8px;
+}
+
+p {
+  margin: 0;
+  text-align: left;
+  font-size: 12px;
+  line-height: 18px;
+  margin-left: 8px;
+  margin-right: 8px;
+  margin-bottom: 12px;
+}
+
+ol {
+  margin: 0;
+  text-align: left;
+  font-size: 12px;
+  line-height: 18px;
+  margin-left: 8px;
+  margin-right: 8px;
+}
+
+ul {
+  margin: 0;
+  text-align: left;
+  font-size: 12px;
+  line-height: 18px;
+  margin-left: 8px;
+  margin-right: 8px;
+}
+
+li {
+  margin-bottom: 12px;
+}
+
+a {
+  color: #9BA5B1;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.text_meta_date {
+  color: #9BA5B1;
+  font-style: italic;
+}
+
+.text_meta_url {
+  color: #9BA5B1;
+}
+
+.doc_meta {
+  margin-bottom: 32px;
+}
+
+.text_meta {
   margin-bottom: 8px;
 }
 
 html, body {
   font-family: "Roboto", sans-serif;
+  background: #f8f8f8;
+  color: #373B40;
 }
 
 .page {
@@ -31,11 +101,6 @@ img {
 
 figure {
   margin: 0;
-}
-
-p {
-  margin: 0;
-  text-align: left;
 }
 
 @media screen and (max-width: 480px) {
