changed from dangerouslysetinnerhtml to html react parser

--- a/src/App.css
+++ b/src/App.css
@@ -85,6 +85,10 @@ a {
   margin-bottom: 8px;
 }
 
+.text-annotation {
+  background-color: rgba(255, 246, 36, 0.33);
+}
+
 html, body {
   font-family: "Roboto", sans-serif;
   background: #f8f8f8;
