--- a/src/styles/_text.scss
+++ b/src/styles/_text.scss
@@ -97,6 +97,9 @@ a {
     margin-bottom: $header-margin-bottom;
 }
 
+.text-annotation {
+    background-color: $color-highlight;
+}
 @media screen and (max-width: 480px) {
 
 }
