--- a/src/styles/_basevars.scss
+++ b/src/styles/_basevars.scss
@@ -7,6 +7,8 @@
 $color-bg: #f8f8f8;
 $color-blk: #373B40;
 $color-grey: #9BA5B1;
+$color-highlight: rgba(255,246,36,.33);
+
 
 $txt-wt: 400;
 $txt-wt-emp: 600;
