annotation card functionality

--- a/src/styles/_text.scss
+++ b/src/styles/_text.scss
@@ -81,6 +81,7 @@ a {
 }
 
 .text_meta_date {
+    margin-top: 16px;
     color: $color-grey;
     font-style: italic;
 }
@@ -99,6 +100,10 @@ a {
 
 .text-annotation {
     background-color: $color-highlight;
+}
+
+.text-highlight-open {
+    float: left;
 }
 @media screen and (max-width: 480px) {
 
