--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,7 @@ a {
 }
 
 .text_meta_date {
+  margin-top: 16px;
   color: #9BA5B1;
   font-style: italic;
 }
@@ -87,6 +88,42 @@ a {
 
 .text-annotation {
   background-color: rgba(255, 246, 36, 0.33);
+}
+
+.text-highlight-open {
+  float: left;
+}
+
+.annotationCard {
+  display: flex;
+  flex-direction: row;
+  margin-top: 24px;
+  margin-bottom: 24px;
+}
+
+.annotationProfile {
+  width: 16px;
+  min-width: 16px;
+  margin-right: 8px;
+}
+
+.annotationContent {
+  display: flex;
+  flex-direction: column;
+}
+
+.annotationAuthor {
+  font-weight: bold;
+  margin-bottom: 8px;
+}
+
+.annotationText {
+  margin-bottom: 8px;
+}
+
+.annotationTime {
+  color: #9BA5B1;
+  font-style: italic;
 }
 
 html, body {
