--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 @import "styles/basevars";
 @import "styles/text";
+@import "styles/annotation";
 
 html, body {
     font-family: 'Roboto', sans-serif;
@@ -15,6 +16,10 @@ html, body {
 
 img {
     width: 100%;
+}
+
+.imageCover {
+    
 }
 
 figure {
