--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,13 @@
   font-weight: 400;
   src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff");
 }
-h1, h2 {
+h1, h2, h3 {
   text-align: left;
 }
 
 h1 {
-  font-size: 20px;
-  line-height: 125%;
+  font-size: 24px;
+  line-height: 30px;
   margin-block-end: 0;
   margin-block-start: 0;
   margin-top: 0;
@@ -20,8 +20,8 @@ h1 {
 }
 
 h2 {
-  font-size: 12px;
-  line-height: 18px;
+  font-size: 14px;
+  line-height: 21px;
   margin-block-end: 0;
   margin-block-start: 0;
   margin-top: 0;
@@ -30,21 +30,40 @@ h2 {
   margin-right: 8px;
 }
 
+h3 {
+  font-size: 14px;
+  line-height: 21px;
+  margin-block-end: 0;
+  margin-block-start: 0;
+  margin-top: 0;
+  margin-bottom: 8px;
+  margin-left: 8px;
+  margin-right: 8px;
+}
+
+strong {
+  margin-bottom: 14px;
+}
+
+em {
+  margin-bottom: 14px;
+}
+
 p {
   margin: 0;
   text-align: left;
-  font-size: 12px;
-  line-height: 18px;
+  font-size: 14px;
+  line-height: 21px;
   margin-left: 8px;
   margin-right: 8px;
-  margin-bottom: 12px;
+  margin-bottom: 14px;
 }
 
 ol {
   margin: 0;
   text-align: left;
-  font-size: 12px;
-  line-height: 18px;
+  font-size: 14px;
+  line-height: 21px;
   margin-left: 8px;
   margin-right: 8px;
 }
@@ -52,20 +71,27 @@ ol {
 ul {
   margin: 0;
   text-align: left;
-  font-size: 12px;
-  line-height: 18px;
+  font-size: 14px;
+  line-height: 21px;
   margin-left: 8px;
   margin-right: 8px;
 }
 
 li {
-  margin-bottom: 12px;
+  margin-bottom: 14px;
 }
 
 a {
   color: #9BA5B1;
   text-decoration: none;
   font-weight: bold;
+  margin: 0;
+  text-align: left;
+  font-size: 14px;
+  line-height: 21px;
+  margin-left: 8px;
+  margin-right: 8px;
+  margin-bottom: 14px;
 }
 
 .text_meta_date {
@@ -119,6 +145,7 @@ a {
 
 .annotationText {
   margin-bottom: 8px;
+  margin-right: 32px;
 }
 
 .annotationTime {
