--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto");
+@import url("https://fonts.googleapis.com/css?family=Roboto+Condensed");
+@import url("https://fonts.googleapis.com/css?family=Overpass");
 @font-face {
   font-family: "San Francisco";
   font-weight: 400;
@@ -9,14 +11,15 @@ h1, h2, h3 {
 }
 
 h1 {
-  font-size: 24px;
-  line-height: 30px;
+  font-size: 28px;
+  line-height: 40px;
   margin-block-end: 0;
   margin-block-start: 0;
   margin-top: 0;
   margin-left: 8px;
   margin-right: 8px;
   font-weight: bold;
+  font-family: "Roboto Condensed";
 }
 
 h2 {
@@ -41,14 +44,6 @@ h3 {
   margin-right: 8px;
 }
 
-strong {
-  margin-bottom: 14px;
-}
-
-em {
-  margin-bottom: 14px;
-}
-
 p {
   margin: 0;
   text-align: left;
@@ -57,6 +52,7 @@ p {
   margin-left: 8px;
   margin-right: 8px;
   margin-bottom: 14px;
+  font-family: "Overpass";
 }
 
 ol {
@@ -89,8 +85,6 @@ a {
   text-align: left;
   font-size: 14px;
   line-height: 21px;
-  margin-left: 8px;
-  margin-right: 8px;
   margin-bottom: 14px;
 }
 
@@ -128,29 +122,60 @@ a {
 }
 
 .annotationProfile {
-  width: 16px;
-  min-width: 16px;
+  width: 24px;
+  min-width: 24px;
   margin-right: 8px;
+  border-radius: 12px;
+  margin-top: 8px;
 }
 
 .annotationContent {
   display: flex;
   flex-direction: column;
+  border-style: solid;
+  border-color: #373B40;
+  border-radius: 16px;
+  border-width: 1px;
+  margin-right: 8px;
 }
 
 .annotationAuthor {
   font-weight: bold;
   margin-bottom: 8px;
+  margin-left: 16px;
+  margin-top: 16px;
 }
 
 .annotationText {
   margin-bottom: 8px;
-  margin-right: 32px;
+  margin-right: 16px;
+  margin-left: 16px;
 }
 
 .annotationTime {
   color: #9BA5B1;
   font-style: italic;
+  margin-right: 16px;
+  margin-left: 16px;
+  margin-bottom: 16px;
+}
+
+.doc_page {
+  margin-top: 56px;
+}
+
+.doc_bar {
+  width: 100%;
+  height: 48px;
+  background-color: rgba(248, 248, 248, 0.95);
+  position: fixed;
+  top: 0;
+}
+
+svg {
+  fill: #373B40;
+  margin-left: 8px;
+  margin-top: 8px;
 }
 
 html, body {
@@ -167,8 +192,19 @@ img {
   width: 100%;
 }
 
+p > img {
+  padding: 0;
+  margin-left: -8px;
+  margin-right: -8px;
+  width: calc(100% + 16px);
+}
+
 figure {
   margin: 0;
+}
+
+section {
+  margin-bottom: 24px;
 }
 
 @media screen and (max-width: 480px) {
