--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,11 @@
 
 @import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
+@import url('https://fonts.googleapis.com/css?family=Overpass');
 @import "styles/basevars";
 @import "styles/text";
 @import "styles/annotation";
+@import "styles/navbars";
 
 html, body {
     font-family: 'Roboto', sans-serif;
@@ -18,12 +21,23 @@ img {
     width: 100%;
 }
 
+p > img {
+    padding: 0;
+    margin-left: -8px;
+    margin-right: -8px;
+    width: calc(100% + 16px);
+}
+
 .imageCover {
     
 }
 
 figure {
     margin: 0;
+}
+
+section {
+    margin-bottom: 24px;
 }
 
 
