--- a/src/styles/_annotation.scss
+++ b/src/styles/_annotation.scss
@@ -7,29 +7,40 @@
 }
 
 .annotationProfile {
-    width: 16px;
-    min-width: 16px;
+    width: 24px;
+    min-width: 24px;
     margin-right: 8px;
+    border-radius: 12px;
+    margin-top: 8px;
 }
 
 .annotationContent {
     display: flex;
     flex-direction: column;
-    
+    border-style: solid;
+    border-color: $color-blk;
+    border-radius: 16px;
+    border-width: 1px;
+    margin-right: 8px;
 }
 
 .annotationAuthor {
     font-weight: bold;
     margin-bottom: 8px;
+    margin-left: 16px;
+    margin-top: 16px;
 }
 
 .annotationText {
     margin-bottom: 8px;
-    margin-right: 32px;
-
+    margin-right: 16px;
+    margin-left: 16px;
 }
 
 .annotationTime {
     color: $color-grey;
     font-style: italic;
+    margin-right: 16px;
+    margin-left: 16px;
+    margin-bottom: 16px;
 }
