--- a/src/styles/_basevars.scss
+++ b/src/styles/_basevars.scss
@@ -5,6 +5,7 @@
   }
 
 $color-bg: #f8f8f8;
+$color-white-trans: rgba(248,248,248,.95);
 $color-blk: #373B40;
 $color-grey: #9BA5B1;
 $color-highlight: rgba(255,246,36,.33);
