--- a/src/styles/_text.scss
+++ b/src/styles/_text.scss
@@ -15,7 +15,7 @@ $body-margin-bottom: 14px;
 
 
 
-h1, h2, h3 {
+h1, h2, h3, h4 {
     text-align: $txt-alignment;
 }
 
@@ -27,7 +27,7 @@ h1 {
     margin-top: $header-margin-top;
     margin-left: $mobile-margin-h;
     margin-right: $mobile-margin-h;
-    font-weight: bold;
+    font-weight: 600;
 
     font-family: 'Roboto Condensed';
 }
@@ -43,7 +43,7 @@ h2 {
     margin-right: $mobile-margin-h;
 }
 
-h3 {
+h3, h4, h5, h6 {
     font-size: $body-size;
     line-height: $body-line;
     margin-block-end: 0;
@@ -63,8 +63,6 @@ p {
     margin-left: $mobile-margin-h;
     margin-right: $mobile-margin-h;
     margin-bottom: $body-margin-bottom;
-
-    font-family: 'Overpass';
 }
 
 ol {
@@ -83,6 +81,8 @@ ul {
     line-height: $body-line;
     margin-left: $mobile-margin-h;
     margin-right: $mobile-margin-h;
+    padding-left: 0;
+    padding-inline-start: 24px;
 }
 
 li {
@@ -90,9 +90,9 @@ li {
 }
 
 a {
-    color: $color-grey;
+    color: $color-blu;
     text-decoration: none;
-    font-weight: bold;
+    font-weight: 600;
 
 
     margin: 0;
@@ -101,6 +101,20 @@ a {
     line-height: $body-line;
     margin-bottom: $body-margin-bottom;
     
+}
+
+pre {
+    margin-left: $mobile-margin-h;
+    margin-right: $mobile-margin-h;
+}
+
+code {
+    color: $color-grey;
+    margin: 8px;
+    display: inline-block; 
+    max-width: calc(100% - 16px);
+    font-size: $body-size;
+    overflow-x: scroll;
 }
 
 .text_meta_date {
