--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@
 @import "styles/text";
 @import "styles/annotation";
 @import "styles/navbars";
+@import "styles/userCard";
 
 html, body {
     font-family: 'Overpass', 'Roboto', sans-serif;
