--- a/src/styles/_text.scss
+++ b/src/styles/_text.scss
@@ -143,6 +143,7 @@ code {
     font-size: 12px;
     font-weight: bold;
     line-height: 16px;
+    color: $color-blu;
 }
 
 .text-highlight-open {
