--- a/src/styles/_navbars.scss
+++ b/src/styles/_navbars.scss
@@ -3,7 +3,7 @@
 }
 
 .doc_page {
-    margin-top: 48px;
+    margin-top: 56px;
 }
 
 .doc_bar {
@@ -30,7 +30,7 @@
     height: 16px;
     border-radius: 12px;
     border-style: solid;
-    border-color: $color-blk;
+    border-color: $color-blu;
     border-width: 1px;
     justify-content: flex-start;
     margin-left: 8px;
