--- a/src/App.css
+++ b/src/App.css
@@ -23,23 +23,23 @@ h1 {
 }
 
 h2 {
-  font-size: 14px;
-  line-height: 21px;
+  font-size: 18px;
+  line-height: 24px;
   margin-block-end: 0;
   margin-block-start: 0;
-  margin-top: 0;
-  margin-bottom: 8px;
+  margin-top: 0px;
+  margin-bottom: 14px;
   margin-left: 8px;
   margin-right: 8px;
 }
 
 h3, h4, h5, h6 {
-  font-size: 14px;
-  line-height: 21px;
+  font-size: 18px;
+  line-height: 24px;
   margin-block-end: 0;
   margin-block-start: 0;
-  margin-top: 0;
-  margin-bottom: 8px;
+  margin-top: 0px;
+  margin-bottom: 14px;
   margin-left: 8px;
   margin-right: 8px;
 }
@@ -137,6 +137,8 @@ code {
 }
 
 .annotationCard {
+  float: left;
+  width: 100%;
   display: flex;
   flex-direction: row;
   margin-top: 24px;
@@ -153,6 +155,7 @@ code {
 
 .annotationContent {
   display: flex;
+  flex: 1;
   flex-direction: column;
   border-style: solid;
   border-color: #373B40;
@@ -230,7 +233,7 @@ svg {
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-bottom: 24px;
+  margin-bottom: 16px;
   margin-left: 8px;
 }
 
