--- a/src/styles/_annotation.scss
+++ b/src/styles/_annotation.scss
@@ -1,5 +1,7 @@
 
 .annotationCard {
+    float: left;
+    width: 100%;
     display: flex;
     flex-direction: row;
     margin-top: 24px;
@@ -16,6 +18,7 @@
 
 .annotationContent {
     display: flex;
+    flex: 1;
     flex-direction: column;
     border-style: solid;
     border-color: $color-blk;
