--- a/src/styles/_userCard.scss
+++ b/src/styles/_userCard.scss
@@ -3,26 +3,46 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-bottom: 16px;
-    margin-left: 8px;
+    margin-bottom: 24px;
+    margin-left: $margin-h;
 }
 
 .user_profile {
-    width: 36px;
-    height: 36px;
-    border-radius: 18px;
+    height: 56px;
 }
 
 .user_profile_pic {
-    width: 36px;
-    height: 36px;
-    border-radius: 18px;
+    width: 56px;
+    height: 56px;
+    border-radius: 28px;
 }
 
 .user_card_text_top {
     margin-bottom: 0px;
+    font-size: $body-size;
+    line-height: $body-line;
 }
 
 .user_card_text_bottom {
     margin-bottom: 0px;
+    font-size: $body-size;
+    line-height: $body-line;
+}
+
+@media screen and (max-width: 480px) {
+
+    .user_card_holder {
+        margin-bottom: 16px;
+        margin-left: $mobile-margin-h;
+    }
+
+    .user_profile {
+        height: 36px;
+    }
+
+    .user_profile_pic {
+        width: 36px;
+        height: 36px;
+        border-radius: 18px;
+    }
 }
