--- a/src/styles/_annotation.scss
+++ b/src/styles/_annotation.scss
@@ -5,14 +5,14 @@
     display: flex;
     flex-direction: row;
     margin-top: 24px;
-    margin-bottom: 24px;
+    margin-bottom: 40px;
 }
 
 .annotationProfile {
-    width: 24px;
-    min-width: 24px;
-    margin-right: 8px;
-    border-radius: 12px;
+    width: 32px;
+    min-width: 32px;
+    margin-right: 16px;
+    border-radius: 16px;
     margin-top: 8px;
 }
 
@@ -46,4 +46,18 @@
     margin-right: 16px;
     margin-left: 16px;
     margin-bottom: 16px;
+}
+
+@media screen and (max-width: 480px) {
+    .annotationCard {
+        margin-bottom: 24px;
+    }
+
+    .annotationProfile {
+        width: 24px;
+        min-width: 24px;
+        margin-right: 8px;
+        border-radius: 12px;
+        margin-top: 8px;
+    }
 }
