--- a/src/styles/_navbars.scss
+++ b/src/styles/_navbars.scss
@@ -3,31 +3,31 @@
 }
 
 .doc_page {
-    margin-top: 56px;
+    margin-top: 96px;
 }
 
 .doc_bar {
     width: 100%;
-    height: 48px;
+    height: 64px;
     background-color: $color-white-trans;
     position: fixed;
     top: 0;
 }
 
 .doc_bar_icons {
-    height: 48px;
+    height: 64px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin-left: 8px;
+    margin-left: 0px;
     margin-right: 8px;
 }
 
 .doc_bar_download {
     display: flex;
     flex-direction: row;
-    height: 16px;
+    height: 20px;
     border-radius: 12px;
     border-style: solid;
     border-color: $color-blu;
@@ -44,4 +44,22 @@
 
 svg {
     fill: $color-blk;
+}
+
+@media screen and (max-width: 480px) {
+
+    .doc_page {
+        margin-top: 56px;
+    }
+
+    .doc_bar {
+        width: 100%;
+        height: 48px;
+    }
+
+    .doc_bar_icons {
+        height: 48px;
+        margin-left: 8px;
+        margin-right: 8px;
+    }
 }
