--- a/src/styles/_annotation.scss
+++ b/src/styles/_annotation.scss
@@ -1,11 +1,19 @@
 
+.annotationDesktop {
+
+}
+
+.annotationMobile {
+    display: none;
+}
+
 .annotationCard {
     float: left;
-    width: 100%;
     display: flex;
     flex-direction: row;
     margin-top: 24px;
     margin-bottom: 40px;
+    width: 20rem;
 }
 
 .annotationProfile {
@@ -25,6 +33,7 @@
     border-radius: 16px;
     border-width: 1px;
     margin-right: 8px;
+    max-width: calc(100% - 48px);
 }
 
 .annotationAuthor {
@@ -38,6 +47,8 @@
     margin-bottom: 8px;
     margin-right: 16px;
     margin-left: 16px;
+    word-wrap: break-word;
+    max-width: 100%;
 }
 
 .annotationTime {
@@ -48,9 +59,24 @@
     margin-bottom: 16px;
 }
 
+.appAnnotation {
+    display: none;
+}
+
 @media screen and (max-width: 480px) {
+    .annotationDesktop {
+        display: none;
+    }
+    
+    .annotationMobile {
+        display: block;
+    }
+
     .annotationCard {
         margin-bottom: 24px;
+        width: 100%;
+        max-width: 100%;
+        
     }
 
     .annotationProfile {
